syntax = "proto3";
package ET;


message ObjectQueryResponse // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;

	Entity entity = 1;
}

/// <summary>
/// 传送unit
/// </summary>
//ResponseType M2M_TrasferUnitResponse
message M2M_TrasferUnitRequest // IActorRequest
{
	int32 RpcId = 90;
	Unit Unit = 1;
}
